<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_add_task"
        android:icon="@android:drawable/ic_menu_add"
        android:title="Add Task"
        app:showAsAction="always" />
    <item
        android:id="@+id/sortBtn"
        android:icon="@android:drawable/btn_default"
        android:title="Show Options"
        app:showAsAction="ifRoom"/>
</menu>